EEVEE regression: Generated texture coordinates completly missing #91697

Closed
opened 2021-09-25 05:23:15 +02:00 by Diogo Valadares Reis dos Santos · 21 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.14742 Core Profile Context 21.8.2 27.20.22025.1006

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-24 19:18, hash: a3027fb094
Worked: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-22
Caused by 6a88f83d67

Short description of error
The generated coordinates is completly broken.

Exact steps for others to reproduce the error

  • Just using the generated coordinates on anything shows the error.

image.png
image.png

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.14742 Core Profile Context 21.8.2 27.20.22025.1006 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-24 19:18, hash: `a3027fb094` Worked: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-22 Caused by 6a88f83d67 **Short description of error** The generated coordinates is completly broken. **Exact steps for others to reproduce the error** - Just using the generated coordinates on anything shows the error. ![image.png](https://archive.blender.org/developer/F10581322/image.png) ![image.png](https://archive.blender.org/developer/F10581320/image.png)

Added subscriber: @Diogo_Valadares

Added subscriber: @Diogo_Valadares

#91796 was marked as duplicate of this issue

#91796 was marked as duplicate of this issue

#91757 was marked as duplicate of this issue

#91757 was marked as duplicate of this issue

#91720 was marked as duplicate of this issue

#91720 was marked as duplicate of this issue

#91721 was marked as duplicate of this issue

#91721 was marked as duplicate of this issue

#91716 was marked as duplicate of this issue

#91716 was marked as duplicate of this issue
Member

Added subscribers: @Jeroen-Bakker, @Alaska

Added subscribers: @Jeroen-Bakker, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm. Most shaders or textures (one of the two) just appear pink.

The first bad commit appears to be: 6a88f83d67
CC @Jeroen-Bakker

System Information
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender Version: 3.0.0 Alpha, branch: master, commit date: 2021-09-24 19:18, hash: a3027fb094

Can confirm. Most shaders or textures (one of the two) just appear pink. The first bad commit appears to be: 6a88f83d67 CC @Jeroen-Bakker **System Information** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 **Blender Version:** 3.0.0 Alpha, branch: master, commit date: 2021-09-24 19:18, hash: `a3027fb094`
Alaska changed title from Generated texture coordinates completly missing to EEVEE regression: Generated texture coordinates completly missing 2021-09-25 07:25:24 +02:00

Added subscriber: @erik85

Added subscriber: @erik85

I get this error message:

ERROR (gpu.shader): GPU_material_compile VertShader:
      |
  145 | DEFINE_ATTR(vec3, orco);
      |
      | Error: C1038: declaration of "orco" conflicts with previous declaration at 0(144)
I get this error message: ``` ERROR (gpu.shader): GPU_material_compile VertShader: | 145 | DEFINE_ATTR(vec3, orco); | | Error: C1038: declaration of "orco" conflicts with previous declaration at 0(144) ```

Added subscriber: @LasseFoster-2

Added subscriber: @LasseFoster-2

@Alaska @Jeroen-Bakker I found the bug! I missed an else Keyword in gpu_codegen.c at line 721 causing the orco attribute to be defined twice. I will commit a fix shortly.

@Alaska @Jeroen-Bakker I found the bug! I missed an else Keyword in `gpu_codegen.c` at line 721 causing the orco attribute to be defined twice. I will commit a fix shortly.

Added subscriber: @shadow_creeper

Added subscriber: @shadow_creeper

Added subscribers: @Adrian1819, @DarkKnight

Added subscribers: @Adrian1819, @DarkKnight

Added subscriber: @adrien.gomez

Added subscriber: @adrien.gomez

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jesse Yurkovich self-assigned this 2021-09-27 08:40:37 +02:00

Resolved with 037e66999a

Resolved with 037e66999a

Added subscriber: @kursadk

Added subscriber: @kursadk

Added subscriber: @MLSpence

Added subscriber: @MLSpence
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91697
No description provided.