FIX: T91697 Eevee Generated texture coordinates completly missing

This patch fixes Eevee-regression https://developer.blender.org/T91697

Reviewed By: jbakker

Differential Revision: https://developer.blender.org/D12634